[gd_scene load_steps=15 format=3 uid="uid://da58iwmbsviea"]

[ext_resource type="Script" uid="uid://dlbarnevsbo1u" path="res://Scenes/Entities/Enemies/Swordsman/Base/swordsman_base.gd" id="1_d27yd"]
[ext_resource type="Script" uid="uid://dwn5s6v5no107" path="res://Scenes/Components/hit_box_component.gd" id="3_07ad3"]
[ext_resource type="Script" uid="uid://cbljtbydq410e" path="res://Scenes/Components/hurt_box_component.gd" id="3_d5clh"]
[ext_resource type="Script" uid="uid://dlf30ooli6jr" path="res://Scenes/Components/health_component.gd" id="4_ebh70"]
[ext_resource type="Script" uid="uid://c0aresow0k4hg" path="res://Scenes/Components/WeaponAttack/attack_component.gd" id="5_41ql2"]
[ext_resource type="Script" uid="uid://b7pywml3u85jn" path="res://Scenes/Components/CoreAbilities/parry_component.gd" id="6_rmsjx"]
[ext_resource type="Script" uid="uid://c60wdk640jber" path="res://Scenes/Components/CoreAbilities/dash_component.gd" id="7_07ad3"]
[ext_resource type="Script" uid="uid://bh04okmk0y7f" path="res://Scenes/Components/CoreAbilities/dodge_component.gd" id="8_x2vg8"]
[ext_resource type="Script" uid="uid://5lsecnbmvm8q" path="res://Scenes/Components/Movements/enemey_movement_component.gd" id="12_rmsjx"]
[ext_resource type="Texture2D" uid="uid://d0hmafbkdemhd" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/RedFill.png" id="14_xqs0y"]
[ext_resource type="Texture2D" uid="uid://dmui46e8ib2q3" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/Fill.png" id="15_jcyqe"]
[ext_resource type="Texture2D" uid="uid://pjrvsq6wmsi0" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/GreenFill.png" id="16_bnxlh"]
[ext_resource type="Script" uid="uid://c0jtxv7rv0jjg" path="res://Scenes/Entities/Enemies/Swordsman/Base/texture_progress_bar.gd" id="17_jcyqe"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_07ad3"]
radius = 13.0
height = 56.0

[node name="SwordsmanBase" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_d27yd")

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 64
collision_mask = 8
script = ExtResource("3_d5clh")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cbljtbydq410e"

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16
script = ExtResource("3_07ad3")
metadata/_custom_type_script = "uid://dwn5s6v5no107"

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("4_ebh70")
metadata/_custom_type_script = "uid://dlf30ooli6jr"

[node name="AttackComponent" type="Node" parent="."]
script = ExtResource("5_41ql2")
metadata/_custom_type_script = "uid://c0aresow0k4hg"

[node name="CoreAbilities" type="Node" parent="."]

[node name="ParryComponent" type="Node" parent="CoreAbilities"]
script = ExtResource("6_rmsjx")
metadata/_custom_type_script = "uid://b7pywml3u85jn"

[node name="DashComponent" type="Node" parent="CoreAbilities"]
script = ExtResource("7_07ad3")
metadata/_custom_type_script = "uid://c60wdk640jber"

[node name="DodgeComponent" type="Node" parent="CoreAbilities"]
script = ExtResource("8_x2vg8")
metadata/_custom_type_script = "uid://bh04okmk0y7f"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 7)
shape = SubResource("CapsuleShape2D_07ad3")

[node name="EnemyMovementComponent" type="Node2D" parent="."]
script = ExtResource("12_rmsjx")
metadata/_custom_type_script = "uid://5lsecnbmvm8q"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control" node_paths=PackedStringArray("health_component")]
layout_mode = 0
offset_left = -32.0
offset_top = -31.0
offset_right = 32.0
offset_bottom = 9.0
texture_under = ExtResource("14_xqs0y")
texture_over = ExtResource("15_jcyqe")
texture_progress = ExtResource("16_bnxlh")
script = ExtResource("17_jcyqe")
health_component = NodePath("../../HealthComponent")
