[gd_scene load_steps=27 format=3 uid="uid://sja4gr0plns4"]

[ext_resource type="Texture2D" uid="uid://dtnmem8b1576e" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Attack/Attack-Sheet.png" id="1_a0lnj"]
[ext_resource type="Texture2D" uid="uid://cjr8vdj6qehdn" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Fly/Fly-Sheet.png" id="1_bogrk"]
[ext_resource type="Script" uid="uid://bqpasuo8cmlh4" path="res://Scenes/Entities/Enemies/small_bee.gd" id="1_gv4wh"]
[ext_resource type="Texture2D" uid="uid://bo1rb3agqtj0q" path="res://Assets/Legacy-Fantasy - High Forest 2.3/Mob/Small Bee/Hit/Hit-Sheet.png" id="3_mk7hq"]
[ext_resource type="Script" uid="uid://cbljtbydq410e" path="res://Scenes/Components/hurt_box_component.gd" id="4_wihui"]
[ext_resource type="Script" uid="uid://dwn5s6v5no107" path="res://Scenes/Components/hit_box_component.gd" id="5_gv4wh"]
[ext_resource type="Texture2D" uid="uid://d0hmafbkdemhd" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/RedFill.png" id="7_tihq5"]
[ext_resource type="Texture2D" uid="uid://dmui46e8ib2q3" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/Fill.png" id="8_ngixl"]
[ext_resource type="Texture2D" uid="uid://pjrvsq6wmsi0" path="res://Assets/Legacy-Fantasy - High Forest 2.3/HUD/GreenFill.png" id="9_5ntsh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gv4wh"]
atlas = ExtResource("1_a0lnj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji5m4"]
atlas = ExtResource("1_a0lnj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o54ra"]
atlas = ExtResource("1_a0lnj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tihq5"]
atlas = ExtResource("1_a0lnj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkydl"]
atlas = ExtResource("1_bogrk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0lnj"]
atlas = ExtResource("1_bogrk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk7hq"]
atlas = ExtResource("1_bogrk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wihui"]
atlas = ExtResource("1_bogrk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngixl"]
atlas = ExtResource("3_mk7hq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ntsh"]
atlas = ExtResource("3_mk7hq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m75cr"]
atlas = ExtResource("3_mk7hq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2awbv"]
atlas = ExtResource("3_mk7hq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gv4wh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv4wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji5m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o54ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihq5")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkydl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0lnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk7hq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wihui")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngixl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ntsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m75cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2awbv")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a0lnj"]
radius = 11.0
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a0lnj"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ji5m4"]
radius = 25.7099

[sub_resource type="CircleShape2D" id="CircleShape2D_o54ra"]
radius = 13.0

[node name="Small Bee" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_gv4wh")
enemy_type = "bee"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_gv4wh")
animation = &"attack"
autoplay = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_a0lnj")

[node name="Detection Area" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Area"]
shape = SubResource("CircleShape2D_a0lnj")
debug_color = Color(0.490196, 0.435294, 0.509804, 0.419608)

[node name="HurtBoxComponent" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 8
script = ExtResource("4_wihui")
metadata/_custom_type_script = "uid://cbljtbydq410e"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("CircleShape2D_ji5m4")
debug_color = Color(0.866667, 0.305882, 0.482353, 0.419608)

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16
script = ExtResource("5_gv4wh")
metadata/_custom_type_script = "uid://dwn5s6v5no107"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_o54ra")
debug_color = Color(0.168627, 0.639216, 0.231373, 0.419608)

[node name="Movement Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="Attack Delay" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = -32.0
offset_top = -25.0
offset_right = 32.0
offset_bottom = 15.0
step = 0.1
texture_under = ExtResource("7_tihq5")
texture_over = ExtResource("8_ngixl")
texture_progress = ExtResource("9_5ntsh")

[connection signal="body_entered" from="Detection Area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection Area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="HurtBoxComponent" to="." method="_on_hurt_box_component_area_entered"]
[connection signal="area_exited" from="HurtBoxComponent" to="." method="_on_hurt_box_component_area_exited"]
[connection signal="timeout" from="Movement Timer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="Attack Delay" to="." method="_on_attack_delay_timeout"]
